discussion/kv_engine/128634/128634_rev23_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Introduce X-macro statistics definitions

With the introduction of Prometheus as a stats output, more information
is needed for each statistic. Rather than inline everything, stats can
now be declared in stats.def.h and referenced through the
cb::stats::StatKey enum.

Stats can be declared with:

 - units (e.g., microseconds)
 - metric family name
 - key-value labels

These new pieces of information are not used by the existing CBStats
output (but could be in the future). They are added to support
Prometheus stats. Before exposition, stats must be scaled to base units
(seconds, bytes - see https://prometheus.io/docs/practices/naming/ )
and appropriately suffixed.

Metric family names may be used to logically group stats which
represent variants of the same underlying stat. Rather than having
stats like "get_cmd" and "set_cmd" which are only identifiable as
related by the suffix convention, Prometheus can instead represent
these as two stats with the same metric name but different labels
(for example)

 cmd_time_taken_seconds{"op"="get"}
 cmd_time_taken_seconds{"op"="set"}

To do so, the stats could be declared as:

 STAT(get_cmd, microseconds, "cmd_time_taken", "op", "get")
 STAT(set_cmd, microseconds, "cmd_time_taken", "op", "set")

Note, the unit indicates the unit of the value tracked in kv_engine -
Prometheus exposition will _always_ scale the stat to the base unit
from whatever unit is provided - here the value would be divided by
10e6 to get a quantity in seconds.

Given the large number of existing stats, this functionality is all
opt-in for now. CBStats output will remain unchanged.

Change-Id: I3789681c1a35082a34c9ca90992a257f24a02f28

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-19 13:52:34.000000000
Message: 
Uploaded patch set 23.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-19 14:19:12.000000000
Message: 
Patch Set 23: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3862/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:2: error: A STAT macro must be defined before including stats.def.h [clang-diagnostic-error]
#error A STAT macro must be defined before including stats.def.h
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:6: error: use of undeclared identifier "bg_wait" [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:15: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:29: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:31: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:33: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:66:34: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                                 ^
                                 ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3862/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:2:
error: A STAT macro must be defined before including stats.def.h [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3862/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29648/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\include\statistics\units.h(85): error C2039: "string_view_literals": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29648/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4187/ : FAILURE

Failure of a CTest test [2020-08-19T14:08:00.334Z] 164/410 Test #287: kv-engine-check-header-define-once-guard .................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4187/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5162/ : FAILURE

Compile error at [2020-08-19T14:04:47.142Z] ../kv_engine/statistics/definitions.cc:30:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatDef, 31>::_Type {aka cb::stats::StatDef [31]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5162/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5071/ : FAILURE

Compile error at [2020-08-19T13:59:45.469Z] ../kv_engine/statistics/definitions.cc:30:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatDef, 31>::_Type {aka cb::stats::StatDef [31]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5071/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5259/ : FAILURE

Compile error at [2020-08-19T14:01:12.720Z] ../kv_engine/statistics/definitions.cc:30:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatDef, 31>::_Type {aka cb::stats::StatDef [31]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5259/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12976/ : FAILURE

Compile error at [2020-08-19T14:13:25.819Z] ../kv_engine/statistics/definitions.cc:30:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatDef, 31>::_Type {aka cb::stats::StatDef [31]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12976/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25683/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2386/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-08-19 14:45:55.000000000
Message: 
Patch Set 23: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
